<tr><td>The following parts are described in this section:
<ol type="I">
    <li> \ref PageDeveloperInfo "Developer Information Page"
        <ul><li> \ref WhereToStart </li>
        <li> \ref HowtoLearnIsoAgLib </li>
        <li> \ref MemoryUsage </li>
        </ul>
    </li>
    <li> Changelog Page</li>
    <li> \ref PageTodo "Main TODO Items Page"</li>
</ol>
</td></tr>
</table>


\section Changes Changes

\subsection Change_M 2.0 to 2.1
  - optimized scheduler resorting to avoid several HEAP malloc/free calls
  - added new DEFINEs for MultiReceive: refer to new generated config_xxx.h or isoaglib_config.h
  - vt2iso: special parsing of proprietary elements and attributes possible
  - bug fix in Scheduler_c::resortTaskList(): task list resorting corrected
  - added language-auto-detection to vt2iso
  - added support for Auxiliary Assignment and passing the AuxInputStatus message to the application
  - added functionality to Base-Classes to suppress PGNs using a bitmask
  - bug fix: Address-Claim now also sent out after the 250ms-period if requested in this 250ms-period
  - introduce new target hardware: AMS5 of ECU manufacturer Gesas
  - avoid any multiple inheritance in IsoAgLib
  - change HAL modules for PC-RTE so that they read the RTE server name from standard environment variable RTE_HOST
  - class names match now a strict camel case pattern (e.g. ISOMonitor_c renamed to IsoMonitor_c)
  - bug fix: replacement of the first item in VT-Client CommandQueue for replacement corrected
  - bug fix: devpropertyhandler corrected (incoming command-responses on ChangeDesignator)
  - new WorkingSet announce strategy: no more automatic announce on Address-Claim
  - rename member variables, so that they start with m_ in comm/base and comm/base/ext
  - can_server now with socket interface (Windows and Linux) and message queues (Linux only) with common CAN device extensions (PEAK can card, A1, Sontheim, ...)