@@ -1,4 +1,8 @@
-<hr style="clear:left">
+<center style="clear:left;padding-top:2.5em;">
+<i>Copyright &copy; 1999 - 2007 Achim Spangler, Martin Wodok<br/>
+Licensed with Exceptions under the General Public License (GPL) of the Free Software Foundation</i>
+</center>
+<hr>
 <table border="0" width=100%>
 <tr><td style="text-align:left">
     <small>
