@@ -1,7 +1,3 @@
-<center>
-<i>Copyright &copy; 1999 - 2007 Achim Spangler, Martin Wodok<br/>
-Licensed with Exceptions under the General Public License (GPL) of the Free Software Foundation</i>
-</center>
 <hr>
 <div id="menu">
 INCLUDE_doc/txt/menu-list.txt_INCLUDE
